Update on the config file

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 # Note: To declare a String value don't add the quotes.
 
-number_of_workers = <number-of-workers>
+number_of_workers = 5
 master_ip = localhost
 client_port = 4445
 worker_port = 4444
