updating config, Client, ClientHandler and Master to have the foundations to move gpx files accordingly

--- a/config.properties
+++ b/config.properties
@@ -4,4 +4,5 @@ number_of_workers = 5
 master_ip = localhost
 client_port = 4445
 worker_port = 4444
-directory = ./available_gpx/
+unprocessed_directory = ./available_gpx/
+processed_directory = ./processed_gpx/
