very early attempt at implementing a "statistics" file

--- a/config.properties
+++ b/config.properties
@@ -6,3 +6,5 @@ client_port = 4445
 worker_port = 4444
 unprocessed_directory = ./available_gpx/
 processed_directory = ./processed_gpx/
+statistics_directory = ./statistics/
+statistics_file = statistics.xml
