included segments directory

--- a/config.properties
+++ b/config.properties
@@ -6,5 +6,6 @@ client_port = 4445
 worker_port = 4444
 unprocessed_directory = ./available_gpx/
 processed_directory = ./processed_gpx/
+segment_directory = ./processed_gpx/segments/
 statistics_directory = ./statistics/
 statistics_file = statistics.xml
