Added moving completed gpx from one directory to another (Client)

--- a/config.properties
+++ b/config.properties
@@ -5,6 +5,7 @@ master_ip = localhost
 client_port = 4445
 worker_port = 4444
 unprocessed_directory = ./available_gpx/
+completed_directory = ./completed_gpx/
 processed_directory = ./processed_gpx/
 segment_directory = ./processed_gpx/segments/
 statistics_directory = ./statistics/
