--- a/config.properties
+++ b/config.properties
@@ -7,6 +7,6 @@ worker_port = 4444
 unprocessed_directory = ./available_gpx/
 completed_directory = ./completed_gpx/
 processed_directory = ./processed_gpx/
-segment_directory = ./processed_gpx/segments/
+segment_directory = ./available_segments/
 statistics_directory = ./statistics/
 statistics_file = statistics.xml
