updated client/worker ports, renamed client_port to user_port to more accurately reflect the name changes for User

--- a/config.properties
+++ b/config.properties
@@ -1,8 +1,8 @@
 
 number_of_workers = 5
 master_ip = localhost
-client_port = 5554
-worker_port = 4455
+user_port = 5454
+worker_port = 5029
 unprocessed_directory = ./available_gpx/
 completed_directory = ./completed_gpx/
 segment_directory = ./registered_segments/
