--- a/config.properties
+++ b/config.properties
@@ -1,8 +1,8 @@
 
 number_of_workers = 5
-master_ip = localhost
-user_port = 5454
-worker_port = 5029
+master_ip = 192.168.1.10
+client_port = 8890
+worker_port = 4455
 unprocessed_directory = ./available_gpx/
 completed_directory = ./completed_gpx/
 segment_directory = ./registered_segments/
