--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 
 number_of_workers = 5
-master_ip = localhost
+master_ip = 192.168.1.10
 client_port = 8890
 worker_port = 4455
 unprocessed_directory = ./available_gpx/
